Loading and persisting sequest data for MSMS alignment verification and AMT validation.

--- a/src/MultiAlignCore/MultiAlignCore.csproj
+++ b/src/MultiAlignCore/MultiAlignCore.csproj
@@ -188,6 +188,7 @@
     <Compile Include="Data\MultiAlignAnalysis.cs" />
     <Compile Include="Data\MultiAlignAnalysisDelegates.cs" />
     <Compile Include="Data\PeakMatchingResults.cs" />
+    <Compile Include="Data\SequenceData\DatabaseSearchSequence.cs" />
     <Compile Include="IO\Analysis\AnalysisAlignmentDataWriter.cs" />
     <Compile Include="IO\Analysis\AnalysisBinaryReader.cs" />
     <Compile Include="IO\Analysis\AnalysisBinaryWriter.cs" />
@@ -203,6 +204,8 @@
     <Compile Include="IO\Analysis\TableWriterColumnOptions.cs" />
     <Compile Include="IO\Factors\FactorFileReader.cs" />
     <Compile Include="IO\Factors\MultiAlignFactorSink.cs" />
+    <Compile Include="IO\SequenceData\DatabaseSearchSequenceDAOHibernate.cs" />
+    <Compile Include="IO\SequenceData\IDatabaseSearchSequenceDAO.cs" />
     <Compile Include="IO\Features\IMSMSClusterMapDAO.cs" />
     <Compile Include="IO\Features\Hibernate\MSMSClusterMapDAOHibernate.cs" />
     <Compile Include="IO\Features\Hibernate\DatasetToFactorMap.cs" />
@@ -251,6 +254,7 @@
     <Compile Include="IO\Features\UMCClusterScanWriter.cs" />
     <Compile Include="IO\Features\UMCLoaderFactory.cs" />
     <Compile Include="IO\Features\UmcReader.cs" />
+    <Compile Include="IO\IMageSink.cs" />
     <Compile Include="IO\InputFiles\CommandLineParser.cs" />
     <Compile Include="IO\InputFiles\DatabaseDatasetIDLoader.cs" />
     <Compile Include="IO\InputFiles\DatabaseDatasetLoader.cs" />
@@ -299,6 +303,8 @@
     <Compile Include="Data\Cluster\classClusterDataSummaryAttr.cs" />
     <Compile Include="Data\Factors\FactorDefinitions.cs" />
     <Compile Include="Data\MassTags\clsMassTags.cs" />
+    <Compile Include="IO\SequenceData\MAGEDatabaseSearchAdaptor.cs" />
+    <Compile Include="IO\SequenceData\SequestFirstHitSink.cs" />
     <Compile Include="IStatusProvider.cs" />
     <Compile Include="Math\MathUtilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -330,6 +336,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="IO\Features\Hibernate\Mappings\DatasetToFactor.hbm.xml" />
     <EmbeddedResource Include="IO\Features\Hibernate\Mappings\MSMSClusterMap.hbm.xml" />
+    <EmbeddedResource Include="IO\SequenceData\Mappings\DatabaseSearchSequence.hbm.xml" />
     <Content Include="MSDBLibrary.dll" />
     <Content Include="xerces-c_2_7.dll" />
     <Content Include="xerces-c_2_7D.dll" />
