Exporters for Vlad's SARC data to find clusters with MSMS spectra.  This is for making a database out of clusters, then using that to align new samples to.

--- a/src/MultiAlignCore/MultiAlignCore.csproj
+++ b/src/MultiAlignCore/MultiAlignCore.csproj
@@ -204,6 +204,10 @@
     <Compile Include="IO\Analysis\TableWriterColumnOptions.cs" />
     <Compile Include="IO\Factors\FactorFileReader.cs" />
     <Compile Include="IO\Factors\MultiAlignFactorSink.cs" />
+    <Compile Include="IO\Features\UMCClusterMsmsWriter.cs" />
+    <Compile Include="IO\Features\MsmsExtractor.cs" />
+    <Compile Include="IO\MTDB\MAGEMetaSampleDatabaseSink.cs" />
+    <Compile Include="IO\MTDB\MetaSampleDatbaseLoader.cs" />
     <Compile Include="IO\SequenceData\DatabaseSearchSequenceDAOHibernate.cs" />
     <Compile Include="IO\SequenceData\IDatabaseSearchSequenceDAO.cs" />
     <Compile Include="IO\Features\IMSMSClusterMapDAO.cs" />
