--- a/src/MultiAlignCore/MultiAlignCore.csproj
+++ b/src/MultiAlignCore/MultiAlignCore.csproj
@@ -130,11 +130,17 @@
   <ItemGroup>
     <Compile Include="Algorithms\AlgorithmProvider.cs" />
     <Compile Include="Algorithms\Alignment\AlignmentOptions.cs" />
-    <Compile Include="Algorithms\Alignment\AnchorPointAlignment.cs" />
+    <Compile Include="Algorithms\Alignment\ChebyshevAligner.cs" />
+    <Compile Include="Algorithms\Alignment\MSMSAlignmentDatabaseBuilder.cs" />
+    <Compile Include="Algorithms\Alignment\MSMSSpectralClusterer.cs" />
     <Compile Include="Algorithms\Alignment\DriftTimeAlignmentOptions.cs" />
     <Compile Include="Algorithms\Alignment\LCMSWarpFeatureAligner.cs" />
     <Compile Include="Algorithms\Alignment\IFeatureAligner.cs" />
     <Compile Include="Algorithms\AlgorithmBuilder.cs" />
+    <Compile Include="Algorithms\AnalysisGraph.cs" />
+    <Compile Include="Algorithms\AnalysisStep.cs" />
+    <Compile Include="Algorithms\AnalysisType.cs" />
+    <Compile Include="Algorithms\AnalysisValidator.cs" />
     <Compile Include="Algorithms\Clustering\ClusteringOptions.cs" />
     <Compile Include="Algorithms\Clustering\MsnClusterer.cs" />
     <Compile Include="Algorithms\Clustering\ClusteringAlgorithmType.cs" />
@@ -160,6 +166,7 @@
     <Compile Include="Algorithms\FeatureMatcher\IPeakMatcher.cs" />
     <Compile Include="Algorithms\FeatureMatcher\TraditionalPeakMatcher.cs" />
     <Compile Include="ApplicationUtility.cs" />
+    <Compile Include="Data\AnalysisConfig.cs" />
     <Compile Include="Data\AnalysisOptions.cs" />
     <Compile Include="Data\AnalysisUtils.cs" />
     <Compile Include="Data\DataSummaryAttribute.cs" />
@@ -202,12 +209,17 @@
     <Compile Include="IO\Analysis\PeakMatchResultsWriter.cs" />
     <Compile Include="IO\Analysis\ReadProgressStream.cs" />
     <Compile Include="IO\Analysis\TableWriterColumnOptions.cs" />
+    <Compile Include="IO\ClusterExporterComposite.cs" />
     <Compile Include="IO\Factors\FactorFileReader.cs" />
     <Compile Include="IO\Factors\MultiAlignFactorSink.cs" />
+    <Compile Include="IO\Features\MSMSClusterWriter.cs" />
+    <Compile Include="IO\Features\IAlignmentDAO.cs" />
+    <Compile Include="IO\Features\Hibernate\AlignmentDAOHibernate.cs" />
     <Compile Include="IO\Features\UMCClusterMsmsWriter.cs" />
     <Compile Include="IO\Features\MsmsExtractor.cs" />
     <Compile Include="IO\MTDB\MAGEMetaSampleDatabaseSink.cs" />
     <Compile Include="IO\MTDB\MetaSampleDatbaseLoader.cs" />
+    <Compile Include="IO\ProgressNotifierMediator.cs" />
     <Compile Include="IO\SequenceData\DatabaseSearchSequenceDAOHibernate.cs" />
     <Compile Include="IO\SequenceData\IDatabaseSearchSequenceDAO.cs" />
     <Compile Include="IO\Features\IMSMSClusterMapDAO.cs" />
@@ -310,6 +322,7 @@
     <Compile Include="IO\SequenceData\MAGEDatabaseSearchAdaptor.cs" />
     <Compile Include="IO\SequenceData\SequestFirstHitSink.cs" />
     <Compile Include="IStatusProvider.cs" />
+    <Compile Include="Data\Cluster\ClusterStats.cs" />
     <Compile Include="Math\MathUtilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -341,6 +354,7 @@
     <EmbeddedResource Include="IO\Features\Hibernate\Mappings\DatasetToFactor.hbm.xml" />
     <EmbeddedResource Include="IO\Features\Hibernate\Mappings\MSMSClusterMap.hbm.xml" />
     <EmbeddedResource Include="IO\SequenceData\Mappings\DatabaseSearchSequence.hbm.xml" />
+    <EmbeddedResource Include="IO\Features\Hibernate\Mappings\AlignmentData.hbm.xml" />
     <Content Include="MSDBLibrary.dll" />
     <Content Include="xerces-c_2_7.dll" />
     <Content Include="xerces-c_2_7D.dll" />
@@ -362,6 +376,9 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Extensions\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
