--- a/src/MultiAlignCustomControls/MultiAlignCustomControls.csproj
+++ b/src/MultiAlignCustomControls/MultiAlignCustomControls.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Charting\ctlClusterChart.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Charting\SeriesOptions.cs" />
     <Compile Include="Drawing\RenderDatasetInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
