--- a/src/MultiAlignCore/MultiAlignCore.csproj
+++ b/src/MultiAlignCore/MultiAlignCore.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Algorithms\AlgorithmProvider.cs" />
     <Compile Include="Algorithms\Alignment\AlignmentOptions.cs" />
     <Compile Include="Algorithms\Alignment\ChebyshevAligner.cs" />
+    <Compile Include="Algorithms\Alignment\DriftTimeAligner.cs" />
     <Compile Include="Algorithms\Alignment\MSMSAlignmentDatabaseBuilder.cs" />
     <Compile Include="Algorithms\Alignment\MSMSSpectralClusterer.cs" />
     <Compile Include="Algorithms\Alignment\DriftTimeAlignmentOptions.cs" />
@@ -146,6 +147,7 @@
     <Compile Include="Algorithms\Clustering\MsnClusterer.cs" />
     <Compile Include="Algorithms\Clustering\ClusteringAlgorithmType.cs" />
     <Compile Include="Algorithms\FeatureFinding\AbundanceReportingType.cs" />
+    <Compile Include="Algorithms\FeatureFinding\FeatureFinderFactory.cs" />
     <Compile Include="Algorithms\FeatureFinding\UMCFeatureFinderOptions.cs" />
     <Compile Include="Algorithms\FeatureFinding\IFeatureFinder.cs" />
     <Compile Include="Algorithms\FeatureFinding\UMCFeatureFinder.cs" />
@@ -171,7 +173,9 @@
     <Compile Include="Data\AnalysisOptions.cs" />
     <Compile Include="Data\AnalysisUtils.cs" />
     <Compile Include="Data\DataSummaryAttribute.cs" />
+    <Compile Include="Data\Features\FeatureLoadingData.cs" />
     <Compile Include="Data\Features\LCMSFeatureChargeMapBuilder.cs" />
+    <Compile Include="Data\Features\FeatureDataConverters.cs" />
     <Compile Include="Data\MSMSClusterMap.cs" />
     <Compile Include="Data\Factors\DatasetToExperimentalFactorMap.cs" />
     <Compile Include="Data\Factors\ExperimentalFactor.cs" />
@@ -213,6 +217,7 @@
     <Compile Include="IO\ClusterExporterComposite.cs" />
     <Compile Include="IO\Factors\FactorFileReader.cs" />
     <Compile Include="IO\Factors\MultiAlignFactorSink.cs" />
+    <Compile Include="IO\Features\LCMSFeatureFileReader.cs" />
     <Compile Include="IO\Features\Hibernate\MassTagMatchDAO.cs" />
     <Compile Include="IO\Features\IMassTagMatchDAO.cs" />
     <Compile Include="IO\Features\MSMSClusterWriter.cs" />
@@ -357,6 +362,8 @@
     <EmbeddedResource Include="IO\Features\Hibernate\Mappings\MSMSClusterMap.hbm.xml" />
     <EmbeddedResource Include="IO\SequenceData\Mappings\DatabaseSearchSequence.hbm.xml" />
     <EmbeddedResource Include="IO\Features\Hibernate\Mappings\AlignmentData.hbm.xml" />
+    <EmbeddedResource Include="IO\Features\Hibernate\Mappings\UmcLight.hbm.xml" />
+    <EmbeddedResource Include="IO\Features\Hibernate\Mappings\UmcClusterLight.hbm.xml" />
     <Content Include="MSDBLibrary.dll" />
     <Content Include="xerces-c_2_7.dll" />
     <Content Include="xerces-c_2_7D.dll" />
