Issue #534 Fixed some errors with converting UMC id's between old and new code.

--- a/src/MultiAlignTestSuite/MultiAlignTestSuite.csproj
+++ b/src/MultiAlignTestSuite/MultiAlignTestSuite.csproj
@@ -96,8 +96,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Algorithms\UMCFeatureFinding.cs" />
+    <Compile Include="IO\UMCFeatureDOATest.cs" />
     <Compile Include="IO\MSFeatureDOATest.cs" />
     <Compile Include="IO\MassTagDOATest.cs" />
+    <Compile Include="IO\NHibernateFeatureTests.cs" />
     <Compile Include="IO\MTDB\MTDBLoaderTests.cs" />
     <Compile Include="IO\Parameters\XMLParameterFileTests.cs" />
     <Compile Include="IO\UMCReaderFailure.cs" />
