--- a/src/MultiAlignCustomControls/MultiAlignCustomControls.csproj
+++ b/src/MultiAlignCustomControls/MultiAlignCustomControls.csproj
@@ -92,6 +92,9 @@
     <Compile Include="Charting\controlHistogram.Designer.cs">
       <DependentUpon>controlHistogram.cs</DependentUpon>
     </Compile>
+    <Compile Include="Charting\AbundanceProfileChart.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Charting\ctlAlignmentHeatMap.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -107,6 +110,12 @@
     <EmbeddedResource Include="Charting\controlHistogram.resx">
       <DependentUpon>controlHistogram.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Charting\AbundanceProfileChart.resx">
+      <DependentUpon>AbundanceProfileChart.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Charting\ctlClusterChart.resx">
+      <DependentUpon>ctlClusterChart.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
