--- a/src/Manassa/Manassa.csproj
+++ b/src/Manassa/Manassa.csproj
@@ -44,8 +44,13 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\PNNLOmics.dll</HintPath>
     </Reference>
+    <Reference Include="RibbonControlsLibrary, Version=4.0.0.11019, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Microsoft Ribbon for WPF\V4.0\RibbonControlsLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -70,7 +75,7 @@
     <Compile Include="Windows\MassTagControl.xaml.cs">
       <DependentUpon>MassTagControl.xaml</DependentUpon>
     </Compile>
-    <Page Include="Windows\AllClustersControl.xaml">
+    <Page Include="Windows\AnalysisView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -90,8 +95,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Windows\AllClustersControl.xaml.cs">
-      <DependentUpon>AllClustersControl.xaml</DependentUpon>
+    <Compile Include="Windows\AnalysisView.xaml.cs">
+      <DependentUpon>AnalysisView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Windows\ClusterControl.xaml.cs">
       <DependentUpon>ClusterControl.xaml</DependentUpon>
@@ -147,7 +152,15 @@
       <Name>PNNLControls</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\MainIcon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy  ..\..\..\..\lib\$(PlatformName)\System.Data.SQLite.dll "$(TargetDir)System.Data.SQLite.dll"
+REM copy ..\..\..\..\..\lib\Thermo*.dll "$(TargetDir)"
+REM copy ..\..\..\..\..\lib\Interop.XRAWFILE2Lib.dll "$(TargetDir)"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
